Fix post stretched link

--- a/assets/sass/posts/_widgets.sass
+++ b/assets/sass/posts/_widgets.sass
@@ -11,6 +11,11 @@
     .title
         font-size: px2rem(22)
         line-height: px2rem(26)
+        a
+            // remove stretched link
+            &::before
+                display: none
+
     time
         text-transform: uppercase
     p
